# TrafficSimulator

./: CMakeLists.txt
src/: Intersection.cpp  Intersection.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  Vehicle.cpp
